--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewStatusView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewStatusView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -33,51 +33,49 @@
                             <color key="textColor" red="0.97647058823529409" green="0.74117647058823533" blue="0.32156862745098036" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请在" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYC-eb-rth">
-                            <rect key="frame" x="15" y="126" width="31" height="21"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="31" id="YcQ-MB-SJT"/>
-                                <constraint firstAttribute="height" constant="21" id="n3C-tf-81x"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <color key="textColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00分00秒" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgc-RF-hgR">
-                            <rect key="frame" x="41" y="126" width="70" height="21"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="21" id="LBH-ka-W5I"/>
-                                <constraint firstAttribute="width" constant="70" id="u1D-Ik-F7e"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="15"/>
-                            <color key="textColor" red="0.97647058823529409" green="0.74117647058823533" blue="0.32156862745098036" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内点击【确认到账】，时间结束默认完成" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fRu-L1-tnq">
-                            <rect key="frame" x="111" y="126" width="303" height="21"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="21" id="aap-8u-a31"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
-                            <color key="textColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="LKC-ql-or9">
+                            <rect key="frame" x="15" y="126" width="313" height="21"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请在" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYC-eb-rth">
+                                    <rect key="frame" x="0.0" y="0.0" width="25" height="21"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="21" id="n3C-tf-81x"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00分00秒" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgc-RF-hgR">
+                                    <rect key="frame" x="28" y="0.0" width="66" height="21"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="21" id="LBH-ka-W5I"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="15"/>
+                                    <color key="textColor" red="0.97647058823529409" green="0.74117647058823533" blue="0.32156862745098036" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内点击【确认到账】，时间结束默认完成" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fRu-L1-tnq">
+                                    <rect key="frame" x="97" y="0.0" width="216" height="21"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="21" id="aap-8u-a31"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
                     </subviews>
                     <color key="backgroundColor" red="0.15294117647058825" green="0.15294117647058825" blue="0.28627450980392155" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstItem="fRu-L1-tnq" firstAttribute="leading" secondItem="pgc-RF-hgR" secondAttribute="trailing" id="77d-AQ-R1l"/>
                         <constraint firstAttribute="trailing" secondItem="6dR-WW-jlk" secondAttribute="trailing" constant="26" id="9LS-Gl-tJg"/>
-                        <constraint firstAttribute="trailing" secondItem="fRu-L1-tnq" secondAttribute="trailing" id="CTE-O4-XS2"/>
                         <constraint firstItem="6dR-WW-jlk" firstAttribute="leading" secondItem="rFd-dV-heL" secondAttribute="leading" constant="19" id="Dw3-YZ-YdJ"/>
                         <constraint firstItem="6dR-WW-jlk" firstAttribute="top" secondItem="rFd-dV-heL" secondAttribute="top" constant="19" id="Iao-Wb-Otn"/>
                         <constraint firstItem="EAY-Wb-EfG" firstAttribute="top" secondItem="6dR-WW-jlk" secondAttribute="bottom" constant="14" id="JNb-2k-vka"/>
                         <constraint firstAttribute="trailing" secondItem="EAY-Wb-EfG" secondAttribute="trailing" id="SLU-El-KBR"/>
-                        <constraint firstItem="pgc-RF-hgR" firstAttribute="centerY" secondItem="ZYC-eb-rth" secondAttribute="centerY" id="bUc-ID-tHC"/>
-                        <constraint firstItem="ZYC-eb-rth" firstAttribute="top" secondItem="EAY-Wb-EfG" secondAttribute="bottom" constant="5" id="hYd-02-rZj"/>
-                        <constraint firstItem="ZYC-eb-rth" firstAttribute="leading" secondItem="rFd-dV-heL" secondAttribute="leading" constant="15" id="hhh-Dv-ndG"/>
-                        <constraint firstItem="pgc-RF-hgR" firstAttribute="leading" secondItem="ZYC-eb-rth" secondAttribute="trailing" constant="-5" id="hlf-DX-kkL"/>
+                        <constraint firstItem="LKC-ql-or9" firstAttribute="leading" secondItem="rFd-dV-heL" secondAttribute="leading" constant="15" id="aEY-II-fIS"/>
+                        <constraint firstItem="LKC-ql-or9" firstAttribute="top" secondItem="EAY-Wb-EfG" secondAttribute="bottom" constant="5" id="ftm-oY-ZKl"/>
                         <constraint firstItem="EAY-Wb-EfG" firstAttribute="leading" secondItem="rFd-dV-heL" secondAttribute="leading" constant="15" id="lPE-ZY-6Qg"/>
-                        <constraint firstItem="fRu-L1-tnq" firstAttribute="centerY" secondItem="pgc-RF-hgR" secondAttribute="centerY" id="nNN-kD-3NC"/>
                     </constraints>
                 </view>
             </subviews>
@@ -93,7 +91,6 @@
             <connections>
                 <outlet property="statusItemView" destination="6dR-WW-jlk" id="st1-8S-g1u"/>
                 <outlet property="statusLB2" destination="ZYC-eb-rth" id="g2i-hG-WeB"/>
-                <outlet property="statusLB2Width" destination="YcQ-MB-SJT" id="Edd-df-6FC"/>
                 <outlet property="statusLB3" destination="pgc-RF-hgR" id="abg-EH-JZk"/>
                 <outlet property="statusLB4" destination="fRu-L1-tnq" id="hAi-KL-ehC"/>
                 <outlet property="stautsLB1" destination="EAY-Wb-EfG" id="OvG-1c-5k6"/>
