--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewAmountListView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewAmountListView.xib
@@ -14,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="500"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取款金额" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LdN-IN-cqw">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="固定金额" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LdN-IN-cqw">
                     <rect key="frame" x="0.0" y="44" width="60" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="60" id="8vk-71-I3S"/>
@@ -25,7 +25,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="8EQ-W5-udy">
-                    <rect key="frame" x="0.0" y="65" width="414" height="434"/>
+                    <rect key="frame" x="0.0" y="65" width="414" height="415"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gSC-Lj-ks2">
                         <size key="itemSize" width="128" height="128"/>
@@ -34,33 +34,34 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ct3-nI-wwR">
-                    <rect key="frame" x="0.0" y="499.5" width="414" height="0.5"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.14999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="选择固定取款金额，可以获得0.5%返利，礼金无上限" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N1a-ga-FkP">
+                    <rect key="frame" x="0.0" y="480" width="414" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="0.5" id="PzK-MU-cea"/>
+                        <constraint firstAttribute="height" constant="20" id="Thx-CJ-EgH"/>
                     </constraints>
-                </view>
+                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                    <color key="textColor" red="0.95686274510000002" green="0.28235294119999998" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="ct3-nI-wwR" secondAttribute="trailing" id="55Z-vL-Waf"/>
                 <constraint firstItem="LdN-IN-cqw" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="HQI-Mu-ku3"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="8EQ-W5-udy" secondAttribute="trailing" id="K1n-vH-Rw5"/>
-                <constraint firstItem="ct3-nI-wwR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="UFc-Dl-RSp"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="8EQ-W5-udy" secondAttribute="bottom" constant="1" id="XMI-tD-iKZ"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="N1a-ga-FkP" secondAttribute="trailing" id="Kan-gC-sWh"/>
+                <constraint firstItem="N1a-ga-FkP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="SdN-sL-gLs"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="N1a-ga-FkP" secondAttribute="bottom" id="ZLh-V7-K09"/>
                 <constraint firstItem="8EQ-W5-udy" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="odH-l1-lF4"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="ct3-nI-wwR" secondAttribute="bottom" id="t9Y-fY-ShM"/>
+                <constraint firstItem="N1a-ga-FkP" firstAttribute="top" secondItem="8EQ-W5-udy" secondAttribute="bottom" id="ogo-rl-631"/>
                 <constraint firstItem="8EQ-W5-udy" firstAttribute="top" secondItem="LdN-IN-cqw" secondAttribute="bottom" id="wky-XJ-c7R"/>
                 <constraint firstItem="LdN-IN-cqw" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="yLw-DZ-arN"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="collectionView" destination="8EQ-W5-udy" id="vbF-Ci-HZs"/>
-                <outlet property="lineHeight" destination="PzK-MU-cea" id="bon-ta-Jcr"/>
             </connections>
-            <point key="canvasLocation" x="139" y="100"/>
+            <point key="canvasLocation" x="137.68115942028987" y="99.776785714285708"/>
         </view>
     </objects>
 </document>
