--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/VC/CNMFastPayStatusVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/VC/CNMFastPayStatusVC.xib
@@ -24,7 +24,6 @@
                 <outlet property="bankRow7" destination="GGK-PY-flV" id="vvn-J5-mHr"/>
                 <outlet property="bankView" destination="PoK-fU-Iad" id="beP-Ie-oE7"/>
                 <outlet property="btnView" destination="CZH-wS-Mpe" id="Taw-1I-pcc"/>
-                <outlet property="cancelBtn" destination="Ubp-EN-6Xx" id="bBO-Zs-KGQ"/>
                 <outlet property="clockView" destination="zXz-4k-uYc" id="AM0-ne-iZ9"/>
                 <outlet property="confirmBtn" destination="vYd-ok-Vjf" id="ubN-eH-5MJ"/>
                 <outlet property="confirmDate" destination="6Uw-9K-s3n" id="1vD-jl-fGR"/>
@@ -673,21 +672,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CZH-wS-Mpe" userLabel="BottomView">
                             <rect key="frame" x="0.0" y="948.5" width="414" height="70"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ubp-EN-6Xx">
-                                    <rect key="frame" x="12" y="22" width="186.5" height="48"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="48" id="sjw-Vr-ihe"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="16"/>
-                                    <state key="normal" title="取消存款">
-                                        <color key="titleColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="cancel:" destination="-1" eventType="touchUpInside" id="rRF-jE-xo7"/>
-                                    </connections>
-                                </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vYd-ok-Vjf" customClass="CNTwoStatusBtn">
-                                    <rect key="frame" x="215.5" y="22" width="186.5" height="48"/>
+                                    <rect key="frame" x="12" y="22" width="390" height="48"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="48" id="seH-x0-5dO"/>
                                     </constraints>
@@ -707,11 +693,8 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="vYd-ok-Vjf" secondAttribute="trailing" constant="12" id="06E-IB-qZ0"/>
-                                <constraint firstItem="vYd-ok-Vjf" firstAttribute="leading" secondItem="Ubp-EN-6Xx" secondAttribute="trailing" constant="17" id="16k-ji-NtW"/>
-                                <constraint firstItem="vYd-ok-Vjf" firstAttribute="width" secondItem="Ubp-EN-6Xx" secondAttribute="width" id="9BR-zx-gEc"/>
+                                <constraint firstItem="vYd-ok-Vjf" firstAttribute="leading" secondItem="CZH-wS-Mpe" secondAttribute="leading" constant="12" id="RGp-rJ-ZfU"/>
                                 <constraint firstAttribute="height" constant="70" id="TNU-5T-u0m"/>
-                                <constraint firstItem="Ubp-EN-6Xx" firstAttribute="leading" secondItem="CZH-wS-Mpe" secondAttribute="leading" constant="12" id="UZ3-MT-SD1"/>
-                                <constraint firstAttribute="bottom" secondItem="Ubp-EN-6Xx" secondAttribute="bottom" id="Zzw-h3-OcA"/>
                                 <constraint firstAttribute="bottom" secondItem="vYd-ok-Vjf" secondAttribute="bottom" id="qIO-Pn-jlu"/>
                             </constraints>
                         </view>
