--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewAmountView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/View/KYMWithdrewAmountView.xib
@@ -11,11 +11,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KYMWithdrewAmountView">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="134"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="163"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qYB-G6-eEV">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="134"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="163"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取款金额" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Grp-cS-CFo">
                             <rect key="frame" x="15" y="2" width="65" height="20"/>
@@ -47,18 +47,17 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="超时未获得取款礼金" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f8J-lE-2OI">
-                            <rect key="frame" x="153" y="56" width="108" height="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="超时未获得取款礼金" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f8J-lE-2OI">
+                            <rect key="frame" x="0.0" y="56" width="414" height="40"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="108" id="ioT-rk-dv5"/>
-                                <constraint firstAttribute="height" constant="17" id="svY-fw-J3J"/>
+                                <constraint firstAttribute="height" constant="40" id="svY-fw-J3J"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
                             <color key="textColor" red="0.97647058823529409" green="0.74117647058823533" blue="0.32156862745098036" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vqr-Bb-bEw">
-                            <rect key="frame" x="0.0" y="79" width="414" height="50"/>
+                            <rect key="frame" x="0.0" y="106" width="414" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="4KB-yh-D1e"/>
                             </constraints>
@@ -80,15 +79,16 @@
                     <constraints>
                         <constraint firstItem="Vqr-Bb-bEw" firstAttribute="centerX" secondItem="qYB-G6-eEV" secondAttribute="centerX" id="6Vq-Vx-611"/>
                         <constraint firstItem="Grp-cS-CFo" firstAttribute="leading" secondItem="qYB-G6-eEV" secondAttribute="leading" constant="15" id="Da7-13-m8E"/>
-                        <constraint firstItem="Vqr-Bb-bEw" firstAttribute="top" secondItem="vbC-2C-29u" secondAttribute="bottom" constant="18" id="Fo9-UM-1cS"/>
+                        <constraint firstItem="Vqr-Bb-bEw" firstAttribute="top" secondItem="f8J-lE-2OI" secondAttribute="bottom" constant="10" id="Fo9-UM-1cS"/>
                         <constraint firstItem="f8J-lE-2OI" firstAttribute="top" secondItem="vbC-2C-29u" secondAttribute="bottom" constant="-5" id="JWF-88-tfd"/>
+                        <constraint firstAttribute="trailing" secondItem="f8J-lE-2OI" secondAttribute="trailing" id="KF4-G2-B5o"/>
                         <constraint firstItem="vbC-2C-29u" firstAttribute="centerX" secondItem="qYB-G6-eEV" secondAttribute="centerX" id="Nem-Hc-DGp"/>
                         <constraint firstItem="dCh-iF-zOu" firstAttribute="centerY" secondItem="vbC-2C-29u" secondAttribute="centerY" constant="2" id="Tyf-ws-bJy"/>
                         <constraint firstItem="vbC-2C-29u" firstAttribute="centerY" secondItem="5hF-ki-NS1" secondAttribute="centerY" id="c7U-0q-KNS"/>
                         <constraint firstItem="dCh-iF-zOu" firstAttribute="leading" secondItem="vbC-2C-29u" secondAttribute="trailing" constant="11" id="eDf-70-vjB"/>
                         <constraint firstItem="Grp-cS-CFo" firstAttribute="top" secondItem="qYB-G6-eEV" secondAttribute="top" constant="2" id="fe5-K3-vyw"/>
-                        <constraint firstItem="f8J-lE-2OI" firstAttribute="centerX" secondItem="qYB-G6-eEV" secondAttribute="centerX" id="idw-po-ZcK"/>
                         <constraint firstItem="Vqr-Bb-bEw" firstAttribute="width" secondItem="qYB-G6-eEV" secondAttribute="width" id="o4s-EV-OPV"/>
+                        <constraint firstItem="f8J-lE-2OI" firstAttribute="leading" secondItem="qYB-G6-eEV" secondAttribute="leading" id="p1O-vm-oiw"/>
                         <constraint firstItem="vbC-2C-29u" firstAttribute="leading" secondItem="5hF-ki-NS1" secondAttribute="trailing" constant="8" id="q5A-c7-ISc"/>
                         <constraint firstItem="vbC-2C-29u" firstAttribute="top" secondItem="qYB-G6-eEV" secondAttribute="top" id="tS3-2S-poV"/>
                     </constraints>
@@ -109,9 +109,10 @@
                 <outlet property="amountStatusLB2" destination="Vqr-Bb-bEw" id="5wf-ak-qgU"/>
                 <outlet property="amountStatusLB2Height" destination="4KB-yh-D1e" id="Brx-kA-Uwb"/>
                 <outlet property="amountStatusLB2Top" destination="Fo9-UM-1cS" id="jLV-l7-gag"/>
+                <outlet property="amountStautsLB1H" destination="svY-fw-J3J" id="9oq-V0-EIm"/>
                 <outlet property="amountWidth" destination="b34-Mm-kXr" id="l5G-cp-jd8"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="71.651785714285708"/>
+            <point key="canvasLocation" x="137.68115942028987" y="81.361607142857139"/>
         </view>
     </objects>
     <resources>
