feat: A01P-3084 [App_A03] [iOS] 币游私享会(合并后) 修正接口参数

--- a/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/View/NewVIPCumulateIdCell.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/View/NewVIPCumulateIdCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -35,8 +35,8 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="领取条件: 12次赌尊   价值: 143,000usdt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJ8-V3-4dd">
-                                        <rect key="frame" x="13" y="39.5" width="218.5" height="14.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="领取条件: 12次赌尊   价值: 143,000usdt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJ8-V3-4dd">
+                                        <rect key="frame" x="13" y="47.5" width="218.5" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="0.91372549020000005" green="0.87058823529999996" blue="0.62745098040000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -64,7 +64,7 @@
                                     <constraint firstItem="PJ8-V3-4dd" firstAttribute="leading" secondItem="ACG-ZY-X5W" secondAttribute="leading" id="GUi-i1-H5n"/>
                                     <constraint firstItem="ACG-ZY-X5W" firstAttribute="top" secondItem="w0o-wc-HQh" secondAttribute="top" constant="17" id="P76-fU-X8b"/>
                                     <constraint firstAttribute="height" constant="70" id="T9w-Ot-Xbm"/>
-                                    <constraint firstAttribute="bottom" secondItem="PJ8-V3-4dd" secondAttribute="bottom" constant="16" id="tZe-F7-nWA"/>
+                                    <constraint firstAttribute="bottom" secondItem="PJ8-V3-4dd" secondAttribute="bottom" constant="8" id="tZe-F7-nWA"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZC-Df-ckI">
