--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/VC/KYMNormalWithdrewSuccessVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchWithdraw/VC/KYMNormalWithdrewSuccessVC.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KYMWithdrewFaildVC">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KYMNormalWithdrewSuccessVC">
             <connections>
                 <outlet property="customerBtn" destination="YgY-Et-QHN" id="ST8-WI-Nhf"/>
                 <outlet property="submitBtn" destination="6jR-97-foI" id="zTb-OM-xxD"/>
